--- a/Udacity Dashboard/requirements.txt
+++ b/Udacity Dashboard/requirements.txt
@@ -4,6 +4,7 @@ chardet==3.0.4
 Click==7.0
 decorator==4.4.0
 Flask==1.0.3
+gunicorn==19.9.0
 idna==2.8
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
